--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ ol {
     color: #2f2d35;
     font-family: 'Playfair Display', serif;
     position: relative;
+    line-height: 31px;
 }
 .common_heading p::after {
     content: '';
@@ -133,6 +134,7 @@ ol {
     font-weight: 900;
     color: #ffffff;
     font-family: 'Playfair Display', serif;
+    line-height: 40px;
 }
 .home_content p {
 	font-size: 14px;
@@ -465,7 +467,6 @@ form .link_btn {
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
     padding-bottom: 65px;
-    padding-left: 80px;
     margin-top: 20px;
 }
 .footer_submit_btn form input {
